# my_daily_stat

./: .gitignore  README.md  pyproject.toml
src/my_daily_stat/: app.py  main.py
src/my_daily_stat/config/: enums.py  env.py  logger.py  settings.py
src/my_daily_stat/db/: base.py  database.py  models.py  schemas.py
src/my_daily_stat/db/adapters/: postgres.py  sqlite.py
src/my_daily_stat/db/repositories/: user_repository.py
src/my_daily_stat/domain/: exceptions.py
src/my_daily_stat/domain/models/: stat.py  stat_value.py  user.py  user_infos.py
src/my_daily_stat/pages/: add_stats.py  login.py
src/my_daily_stat/presentation/: app.py
src/my_daily_stat/utils/: streamlit_dialogs.py
src/my_project/: config.py  main.py
tests/: conftest.py  test_main.py
