[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_daily_stat"
version = "0.1.0"
description = "Application Streamlit pour la prise de note de statistiques quotidiennes."
authors = [{ name="Léo Mainard", email="leomainard63@email.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=8.4.0",
    "sqlmodel>=0.0.27",
    "streamlit[auth]>=1.49.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = ["pytest>=8.4.0"]
